<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TextView_Dialog_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_new_data_point" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <!--

    GALLONS

    -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/new_dp_gallons"
            android:padding="8dp"
            android:text="@string/number_of_gallons_put_in" />

        <EditText
            android:id="@+id/new_dp_gallons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </LinearLayout>


    <!--

    MILES

    -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/new_dp_miles"
            android:padding="8dp"
            android:text="@string/number_of_miles_driven" />

        <EditText
            android:id="@+id/new_dp_miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>


    <!--

    MONEY

    -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Dialog_Line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/new_dp_money"
            android:padding="8dp"
            android:text="@string/money_spent" />

        <EditText
            android:id="@+id/new_dp_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!--

    DATE

    -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <DatePicker
            android:id="@+id/new_dp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <!--

    LOCATION

    -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:visibility="gone"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/new_dp_use_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_location" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_dp_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_fields_are_required_and_need_to_be_greater_than_0"
        android:textColor="#cc2222"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_dp_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/textColorLight" />

        <Button
            android:id="@+id/new_dp_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            android:text="@string/delete"
            android:textColor="@color/textColorLight" />

        <Button
            android:id="@+id/new_dp_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/textColorLight" />
    </LinearLayout>
</LinearLayout>